[package]
name = "poseidon-rs"
version = "0.0.8"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Poseidon hash implementation"
repository = "https://github.com/arnaucube/poseidon-rs"
readme = "README.md"

[lib]
name = "poseidon_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }

ff = {package="ff_ce" , version="0.11", features = ["derive"]}
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_poseidon_hash"
harness = false
