[package]
name = "poseidon-rs"
version = "0.0.8"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Poseidon hash implementation"
repository = "https://github.com/arnaucube/poseidon-rs"
readme = "README.md"

[profile.release]
debug = false

[lib]
name = "poseidon_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }

ff = {package="ff_ce" , version="0.12", features = ["derive"]}
rand = "0.4"
rayon = "1.5.3"

ark-ff = { version = "0.3.0", features = [ "asm" ] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_poseidon_hash"
harness = false
